--- a/src/components/Main/Main.css
+++ b/src/components/Main/Main.css
@@ -1,32 +1,29 @@
-.main{
-    padding: 30px 0;
-    width: 90%;
-    margin: auto;
-   
-  
+.main {
+  padding: 30px 0;
+  width: 90%;
+  margin: auto;
 }
-.item__list{
-    display: flex;
-    flex-wrap: wrap;
+.item__list {
+  display: flex;
+  flex-wrap: wrap;
 }
-.item{
+.item {
   margin: 15px 15px;
-  font-family: 'Roboto';
-font-style: normal;
-font-weight: normal;
-font-size: 18px;
-line-height: 18px;
-  
+  font-family: "Roboto",'Helvetica Neue', sans-serif;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 18px;
+  align-content: center;
 }
-.item__img{
-    width: 200px;
-    height: 200px;
-    border-radius: 100px;
+.item__img {
+  width: 200px;
+  height: 200px;
+  border-radius: 100px;
 }
-.item__name{
-    color: #fff;
-
+.item__name {
+  color: #fff;
 }
-.my-class-name{
-    color: #fff;
+.my-class-name {
+  color: #fff;
 }
